add open api spec & fixed issue endpoint provinsi
